<resources>
    <string name="app_name">LoginRegister_phpMyAdmin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="fullname">fullname</string>
    <string name="email">email</string>
    <string name="username_smallCaps">username</string>
    <string name="password_smallCaps">password</string>

    <string name="alreadyAccount">Already have an account? Login</string>
    <string name="createAccount">Create a new account?  Sign up</string>

</resources>