<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="50sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"/>

        <!-- username layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45sp"
            android:layout_margin="10sp">

            <!-- fullname -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/fullname"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- password layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45sp"
            android:layout_margin="10sp">

            <!-- email-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45sp"
            android:layout_margin="10sp">

            <!-- username -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:drawableEnd="@drawable/user_icon"
                android:hint="@string/username_smallCaps"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45sp"
            android:layout_margin="10sp">

            <!-- password edit text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password_smallCaps"
                android:drawableEnd="@drawable/pwd_icon"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>
        
        <ProgressBar
            android:id="@+id/progressSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"/>


        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            app:cornerRadius="18dp"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />


        <TextView
            android:id="@+id/textviewAlreadyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyAccount"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#546E7A"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>