<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="100sp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"/>

    <!-- username layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45sp"
        android:layout_margin="20sp">

        <!-- username edit text -->

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/user_icon"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- password layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45sp"
        android:layout_margin="20sp">

        <!-- password edit text -->
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/pwd_icon"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            app:cornerRadius="18dp"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textviewAlreadyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#546E7A"/>

    </LinearLayout>



</RelativeLayout>